--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,3 +2,5 @@ cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
 project(webserver)
+
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
