--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "mongoose.c" "wifi.c"
+idf_component_register(SRCS "main.c" "mongoose.c" "wifi.c" "utils.c"
                     INCLUDE_DIRS "")
