--- a/main/CMakeLists.txt
+++ b/main/CMakeLists.txt
@@ -1,2 +1,2 @@
-idf_component_register(SRCS "main.c" "mongoose.c" "wifi.c" "utils.c" "webserver.c" "board.c" "pin_modes.c"
-                    INCLUDE_DIRS "")
+idf_component_register(SRCS "main.c" "mongoose.c" "wifi.c" "utils.c" "webserver.c" "pin_interface.c"
+INCLUDE_DIRS "")
