Move headers to include dir

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
+include_directories(include)
 project(webserver)
 
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
